# Whitebase

./: .gitignore  Cargo.toml  LICENSE.md  README.ja.md  package-lock.json  package.json  readme.md
.github/workflows/: main.yml
apps/whitebase-app/: index.html  package-lock.json  package.json  vite.config.ts
apps/whitebase-app/src/: main.ts  styles.css
apps/whitebase-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/whitebase-server/: Cargo.toml
apps/whitebase-server/src/: main.rs
crates/whitebase-asm-adapter/: Cargo.toml  build.rs
crates/whitebase-asm-adapter/src/: lib.rs
crates/whitebase-asm-adapter/tests/: assembly_smoke.rs
crates/whitebase-backend-bridge/: Cargo.toml
crates/whitebase-backend-bridge/src/: assembly.rs  cpp.rs  lib.rs  rust.rs
crates/whitebase-backend-bridge/tests/: backend_bridge_smoke.rs
crates/whitebase-c-api/: Cargo.toml
crates/whitebase-c-api/include/: whitebase.h
crates/whitebase-c-api/src/: lib.rs
crates/whitebase-core/: Cargo.toml
crates/whitebase-core/src/: lib.rs
crates/whitebase-core/tests/: core_smoke.rs
crates/whitebase-cpp-adapter/: Cargo.toml  build.rs
crates/whitebase-cpp-adapter/src/: lib.rs
crates/whitebase-cpp-adapter/tests/: cpp_backend_smoke.rs
crates/whitebase-interface/: Cargo.toml
crates/whitebase-runner/: Cargo.toml
crates/whitebase-rust-backend/: Cargo.toml
crates/whitebase-wasm/: Cargo.toml
docs/: project-tree.md  setup.md
native/Whitebase.Cpp/: Whitebase.Cpp.slnx
scripts/: export-tree.bat  export-tree.ps1  ops.bat
tools/: control-panel.bat
(+58 files in other folders)
