[package]
name = "whitebase-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }

tokio = {
    version = "1",
    features = [
        "macros",
        "net",
        "rt-multi-thread",
    ],
}

tower-http = {
    version = "0.7",
    features = ["cors"],
}

whitebase-runner = {
    path = "../../crates/whitebase-runner"
}